# hfdl-recorder

./: CLAUDE.md  README.md  deploy.toml  pyproject.toml
config/: hfdl-recorder-config.toml.template
scripts/: build-dumphfdl.sh  deploy.sh  install.sh
src/hfdl_recorder/: __init__.py  __main__.py  bands.py  cli.py  config.py  configurator.py  contract.py
src/hfdl_recorder/core/: band_pipeline.py  daemon.py  feed.py  radiod.py
systemd/: hfdl-recorder@.service
tests/: test_band_pipeline.py  test_bands.py  test_config.py  test_configurator.py  test_contract.py  test_feed.py
tests/fixtures/: test-config.toml
