[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hfdl-recorder"
version = "0.1.0"
description = "HFDL (High Frequency Data Link) recorder for ka9q-radio, supervising one dumphfdl subprocess per band"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Hauan", email = "mjh@hauan.org"},
]
dependencies = [
    "ka9q-python>=3.8.0",
    "numpy>=1.24.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
hfdl-recorder = "hfdl_recorder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
